--- a/src/components/About/About1.css
+++ b/src/components/About/About1.css
@@ -2,18 +2,17 @@
     width: 100%;
     position: relative;
     background: rgb(255, 255, 255);
-    padding: 5rem 0;
+    padding: 2rem 0;
 }
 
 .about1-header {
-    width: 80%;
+    width: 100%;
 }
 
 
 .about1  p {
     font-family: 'Montserrat', sans-serif;
-    text-align: center;
-    padding: 1rem;
+    text-align: justify;
 }
 
 
