--- a/src/components/Contact/ContactCards.css
+++ b/src/components/Contact/ContactCards.css
@@ -1,12 +1,14 @@
 .contact-cards {
     width: 100%;
-    padding: 3rem 0 ;
-    background-color: white;
+    padding: 2rem 0 ;
     margin: auto;
 }
 
 .contact-card {
     width: 250px;
+    box-shadow: -2px -1px 36px -10px rgba(0,0,0,0.10);
+    -webkit-box-shadow: -2px -1px 36px -10px rgba(0,0,0,0.10);
+    -moz-box-shadow: -2px -1px 36px -10px rgba(0,0,0,0.10);
 }
 
 .contact-card h1 {
@@ -22,8 +24,9 @@
 }
 
 .contact-card-icon {
-    width: 100px;
+    width: 150px;
     margin: auto;
+    padding: 1rem;
 }
 
 .contact-card-info {
@@ -35,9 +38,6 @@
 }
 
 @media screen and (max-width:700px) {
-    .contact-card-icon {
-        width: 50px;
-    }
 
     .contact-card h1 {
         font-size: 1rem;
