--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -3,7 +3,7 @@
 
 .contact-hero {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     position: relative;
     display: flex;
     flex-wrap: wrap;
@@ -23,7 +23,7 @@
 .contact-hero .contact-hero-content {
     display: block;
     position: absolute;
-    bottom: 30%;
+    bottom: 20%;
     padding: 1rem;
     left: 5%;
     width: 70%;
@@ -35,9 +35,12 @@
     color: white;
 }
 
-.col a {
-    color: black;
+.contact-hero h2 {
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
 }
+
 
 .contact-hero p {
     font-family: 'Montserrat', sans-serif;
@@ -57,6 +60,7 @@
 .contact-hero .contact-hero-content {
     left: 0%;
     width: 100%;
+    text-align: center;
 }
 
 
