--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -3,7 +3,7 @@
 
 .hero {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -14,7 +14,7 @@
 .hero:before {
   content: '';
   position: absolute;
-  background: url('../../assets/hero-bg.jpg') no-repeat center center/cover;
+  background: url('../../assets/hero-bg2.webp') no-repeat center center/cover;
   height: 100%;
   width: 100%;
   z-index: -1;
