--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -12,9 +12,8 @@
 .navbar .navbar-container {
   width: 100%;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-padding: 0 2rem;
+  justify-content: space-between;
+  padding: 0 2rem;
 }
 
 .navbar-logo {
@@ -55,7 +54,7 @@ padding: 0 2rem;
     height: 100%;
     align-items: center;
     display: flex;
-    margin: auto;
+    margin: auto 0;
 }
 
 
@@ -116,21 +115,18 @@ padding: 0 2rem;
     .navbar .hamburger {
         display: block;
         z-index: 15;
-    }
-
-    .nav-btn {
-      display: none;
+        margin: auto 0;
     }
 
     .navbar .nav-menu {
         position: absolute;
         flex-direction: column;
         width: 100%;
-        height: 100vh;
+        height: 80vh;
         top: 0;
         left:-100%;
         justify-content: center;
-        background: var(--primary-color);
+        background: black;
         transition: 0.5s ease-in;
     }
 
@@ -142,29 +138,7 @@ padding: 0 2rem;
         font-size: 1rem;
     }
 
-    .navbar button {
-        font-size: 1.8rem;
-    }
 
-    .menu-item .sub__menus li a {
-        font-size: 14px;
-      }
-
-      li .submenu-header {
-        font-size: 14px;
-      }
-
-      #submenu-item li {
-        padding: .2rem 1rem;
-      }
-
-      .sub__menus {
-        width: 250px;
-      }
-
-      .navbar .navbar-container {
-        justify-content: space-between;
-      }
 
 }
 
