--- a/src/components/section2/Section2.css
+++ b/src/components/section2/Section2.css
@@ -2,7 +2,7 @@
 
 
 .section2 {
-    padding: 5rem 0 0 0;
+    padding: 2rem 0;
 }
 
 
@@ -53,7 +53,7 @@
     }
 
     .section2-flex {
-        flex-wrap: wrap;
+        flex-wrap: wrap-reverse;
     }
 
     .section2-content-right h1 {
